# MedicalDeviceRegulationAgent

./: .gitignore  DOCS_ORGANIZATION_SUMMARY.md  README_CONSOLIDATION_SUMMARY.md  Readme.md  SCRIPT_SETUP_SUMMARY.md  Task-10.md  comprehensive-test-failure-analysis-and-tasks.md  error-analysis-and-fixing-strategy.md  fix_emoji.py  front-end-testing-plan.md  frontend_investigation_report.md  git_workflow_guide.md  hosting_analysis.md  integration-improvement-plan.md  integration-test-results.md  maintenance-scripts.ps1  monitor-startup-performance.ps1  monitor-system-health.ps1  new-tasks.md  project-documentation-draft.md  project_hub_page_analysis.md  quality-report.json  setup-redis-windows.ps1  simple-command-verification.js  start-backend.ps1  start-backend.sh  start-dev.ps1  start-dev.sh  start-frontend.ps1  start-frontend.sh  system-architecture-flowcharts.md  task-10-completion-summary.md  task-4.md  task-b-i1-verification-report.md  test error to be solved.md  test-error-analysis-report.md  test-failure-root-cause-analysis pd.md  test-failure-root-cause-analysis.md  test-integration.ps1  test-start-backend.ps1  (+5 more)
medical-device-regulatory-assistant/backend/: README.md  README_OpenFDA_Curl_Testing.md  __init__.py  alembic.ini  cli.py  debug_api_health_database.py  debug_health_check.py  debug_health_service_in_app.py  debug_routes.py  debug_token.py  error_tracking.db  error_tracking_test.db  fix_critical_issues.py  main.py  medical_device_assistant.db  medical_device_assistant.db-wal  openfda_curl_test_results.json  openfda_test_config.json  openfda_troubleshoot.sh  pyproject.toml  seed_database.py  simple_auth_test.py  simple_test.py  task_8_4_integration_test_report.json  test_aiosqlite_functionality.py  test_api_client.py  test_api_client_simple.py  test_audit_integration.py  test_audit_simple.py  test_audit_standalone.py  test_core_exceptions.py  test_data_factory.py  test_database_optimization.py  test_document_tool.py  test_enhanced_seeder.py  test_environment_validator.py  test_error_tracking_system.py  test_exception_handling.py  test_exception_integration.py  test_exception_simple.py  (+26 more)
medical-device-regulatory-assistant/backend/agents/: __init__.py  regulatory_agent.py  regulatory_agent_state.py
medical-device-regulatory-assistant/backend/api/: agent_integration.py  audit.py  cache_management.py  error_tracking.py  fda_monitoring.py  health.py  monitoring.py  projects.py  websocket.py
medical-device-regulatory-assistant/backend/core/: __init__.py  configuration.py  environment.py  error_handler.py  error_tracker.py  exception_mapper.py  exceptions.py  resilience.py
medical-device-regulatory-assistant/backend/database/: __init__.py  __main__.py  backup.py  config.py  connection.py  connection_pool.py  dependencies.py  exceptions.py  integrated_seeder.py  migrations.py  seeder.py  (+4 more)
(+1109 files in other folders)
